public/legacy/themes/suite8/css/suitep-base/editview.scss
/* ... */
@media (min-width: 768px) {

  #BILLING_address_fieldset input[type=text] {
    width: 100%;
  }

  #SHIPPING_address_fieldset input[type=text] {
    width: 100%;
  }

  textarea#billing_address_street {
    width: 100%;
  }

  textarea#shipping_address_street {
    width: 100%;
  }

  textarea#primary_address_street {
    width: 100%;
  }

  textarea#alt_address_street {
    width: 100%;
  }

  textarea#description {
    width: 100%;
  }

  .col-xs-6 input[type="text"]#first_name {
    width: 48.5%;
  }
  .col-sm-6 input[type="text"]#first_name {
    width: 48.5%;
  }

  .col-sm-6 [type=bool] {
    line-height: $input-line-height;
  }

  .col-sm-6 .edit-view-field textarea {
    width: 90%;
  }

  .col-sm-12 .col-sm-8.edit-view-field textarea#description {
    width: 100%;
  }

  .col-sm-12 .col-sm-8.edit-view-field textarea {
    width: 100%;
  }

  [field=bool].col-sm-8.edit-view-field {
    height: $button-line-height;
    line-height: $button-line-height;
  }

  .col-sm-12 .col-sm-8.edit-view-field input.sqsEnabled {
    width: 80%;
  }

  .col-sm-6 .col-sm-8.edit-view-field input.sqsEnabled {
    width: 80%;
  }

  .col-sm-12 [field=first_name].edit-view-field select {
    width: 30%;
  }

  .col-sm-6 [field=first_name].edit-view-field select {
    width: 30%;
  }

  .col-sm-12 [field=first_name].edit-view-field input[type="text"]#first_name {
    width: 68%;
  }

  .col-sm-6 [field=first_name].edit-view-field input[type="text"]#first_name {
    width: 58%;
  }

  .col-sm-8 .edit-view-field input[type="text"] {
    width: 100%;
  }

  .col-sm-6 .edit-view-field input[type="text"] {
    width: 100%;
  }

  .email-address-options-container {
    margin-top: 0;
  }

  [type="date"] input[type="text"] {
    width: 90%;
  }

  [type="date"] img {
    margin-left: 8px;
  }
}

@media (min-width: 769px) {

  #BILLING_address_fieldset input[type=text] {
    width: 90%;
  }

  #SHIPPING_address_fieldset input[type=text] {
    width: 90%;
  }

  textarea#billing_address_street {
    width: 90%;
  }

  textarea#shipping_address_street {
    width: 90%;
  }

  textarea#primary_address_street {
    width: 90%;
  }

  textarea#alt_address_street {
    width: 90%;
  }

  textarea#description {
    width: 90%;
  }

  .col-xs-6 input[type="text"]#first_name {
    width: 48.5%;
  }
  .col-sm-6 input[type="text"]#first_name {
    width: 48.5%;
  }

  .col-sm-6 [type=bool] {
    line-height: $input-line-height;
  }

  .col-sm-6 .edit-view-field textarea {
    width: 90%;
  }

  .col-sm-12 .col-sm-8.edit-view-field textarea#description {
    width: 100%;
  }

  .col-sm-12 .col-sm-8.edit-view-field textarea {
    width: 100%;
  }

  [field=bool].col-sm-8.edit-view-field {
    height: $button-line-height;
    line-height: $button-line-height;
  }

  .col-sm-12 .col-sm-8.edit-view-field input.sqsEnabled {
    width: 45%;
  }

  .col-sm-6 .col-sm-8.edit-view-field input.sqsEnabled {
    width: 90%;
  }

  .col-sm-12 [type=name].col-sm-8.edit-view-field input[type="text"] {
    width: 45%;
  }

  .col-sm-12 [type=url].col-sm-8.edit-view-field input[type="text"] {
    width: 45%;
  }


  .col-sm-12 [type=varchar].col-sm-8.edit-view-field input[type="text"] {
    width: 45%;
  }

  .col-sm-12 [type=phone].col-sm-8.edit-view-field input[type="text"] {
    width: 45%;
  }
  .col-sm-12 .col-sm-8 .edit-view-field input[type="text"] {
    width: 85%;
  }

  .col-sm-6 .edit-view-field input[type="text"] {
    width: 90%;
  }

  .email-address-options-container {
    margin-top: 0;
  }

  [type="date"] input[type="text"] {
    width: 90%;
  }

  [type="date"] img {
    margin-left: 8px;
  }

  .col-xs-12 [field=first_name].edit-view-field select {
    width: 15%;
  }

  .col-xs-12 [field=first_name].edit-view-field input[type="text"]#first_name {
    width: 29%;
  }

  .col-sm-6 [field=first_name].edit-view-field select {
    width: 30%;
  }

  .col-sm-6 [field=first_name].edit-view-field input[type="text"]#first_name {
    width: 58%;
  }

}

@media (min-width: 1024px) {
  .col-sm-12 .col-sm-8.edit-view-field input.sqsEnabled {
    width: 31.0%;
  }

  .col-sm-6 .col-sm-8.edit-view-field input.sqsEnabled {
    width: 87%;
  }

  .col-sm-12 [type=varchar].col-sm-8.edit-view-field input[type="text"] {
    width: 45.0%;
  }

  .col-sm-12 .edit-view-field input[type="text"] {
    width: 90%;
  }

  .col-sm-6 .edit-view-field input[type="text"] {
    width: 90%;
  }


  #BILLING_address_fieldset input[type=text] {
    width: 90%;
  }

  #SHIPPING_address_fieldset input[type=text] {
    width: 90%;
  }

  textarea#billing_address_street {
    width: 90%;
  }

  textarea#shipping_address_street {
    width: 90%;
  }

  textarea#primary_address_street {
    width: 90%;
  }

  textarea#alt_address_street {
    width: 90%;
  }

  .col-sm-12 .col-sm-8.edit-view-field textarea#description {
    width: 100%;
  }

  #EditView_tabs .edit [type="checkbox"][name=alt_checkbox] {
    margin-top: 15px;
  }

  .edit-view-field [name=alt_checkbox] {
    margin-top: 15px;
  }

  .edit-view-row-item [field=internal] {
    height: $button-line-height;
    line-height: $button-line-height;
  }
}
/* ... */

